--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="main_page.css">
+    <link rel="stylesheet" href="css/main_page.css">
 </head>
 <body>
     <div class="main-wrapper">
         <nav>
             <div class="nav-buttons">
-                <a href="#">Page 1</a>
+                <a href="other pages/composition_page.html">Composition</a>
                 <a href="#">Page 2</a>
                 <a href="#">Page 3</a>
                 <a href="other pages/lighting_page.html">Lighting</a>
