--- a/other pages/lighting_page.html
+++ b/other pages/lighting_page.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lighting</title>
-    <link rel="stylesheet" href="other_pages.css">
+    <link rel="stylesheet" href="../css/other_pages.css">
 </head>
 <body>
     <nav>
         <h3>Thomas Kovacs</h3>
         <div class="nav-buttons">
             <a href="../index.html">Home</a>
-            <a href="#">Page 1</a>
+            <a href="composition_page.html.html">Composition</a>
             <a href="#">Page 2</a>
             <a href="#">Page 3</a>
         </div>
