Finish main website

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <nav>
             <div class="nav-buttons">
                 <a href="other pages/composition_page.html">Composition</a>
-                <a href="#">Page 2</a>
-                <a href="#">Page 3</a>
+                <a href="other pages/lenses_page.html">Lenses</a>
+                <a href="other pages/photoshop_page.html">Digital Processing</a>
                 <a href="other pages/lighting_page.html">Lighting</a>
             </div>
         </nav>
