--- a/other pages/composition_page.html
+++ b/other pages/composition_page.html
@@ -7,6 +7,7 @@
     <script src="../js/images.js"></script>
     <script src="../js/populate_images.js"></script>
     <link rel="stylesheet" href="../css/other_pages.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <style>
         :root {
             --img-width: 360px
@@ -38,7 +39,7 @@
             top: 0;
             left: 0;
             z-index: 1;
-            background-color: rgba(220, 220, 220, 0.5);
+            background-color: rgba(220, 220, 220, 0.3);
             width: 100%;
             height: 100%;
             color: black;
@@ -48,7 +49,6 @@
             align-items: center; /* Align vertical */
             opacity: 0;
             transition: all 300ms;
-
         }
         .img-wrapper h3 {
             font-family: 'Rokkitt', serif;
@@ -56,11 +56,20 @@
         }
         
         .img-wrapper > div:hover img {
-            filter: blur(0.5em);
-        }
+            /* filter: blur(0.5em); */
+            transform: scale(1.2);
+            cursor: pointer;
+        }   
 
         .img-wrapper > div:hover .img_text  {
             opacity: 1;
+            cursor: pointer;
+        }
+        .long-img {
+            transform: scale(1.1);
+        }
+        .short-img {
+            transform: scale(2.2);
         }
 
         #long-img-1 {
@@ -120,8 +129,8 @@
         <h3>Thomas Kovacs</h3>
         <div class="nav-buttons">
             <a href="../index.html">Home</a>
-            <a href="#">Page 2</a>
-            <a href="#">Page 3</a>
+            <a href="lenses_page.html">Lenses</a>
+            <a href="photoshop_page.html">Digital Processing</a>
             <a href="lighting_page.html">Lighting</a>
         </div>
     </nav>
@@ -130,84 +139,15 @@
             <script>
                 populate_composition()
             </script>
-            <!-- <div id="long-img-1">
-                <img src="../imgs/composition/bike_rack.JPG" alt="">
-                <div class="img_text">
-                    <h3>Green Energy</h3>
-                </div>
-            </div>
-            <div id="long-img-2">
-                <img src="../imgs/composition/leaf.JPG" alt="">
-                <div class="img_text">
-                    <h3>Leaf</h3>
-                </div>
-            </div>
-            <div id="long-img-3">
-                <img src="../imgs/composition/chess_poster.JPG" alt="">
-                <div class="img_text">
-                    <h3>Chess Club</h3>
-                </div>
-            </div>
-            <div id="long-img-4">
-                <img src="../imgs/composition/red_orange_plant.JPG" alt="">
-                <div class="img_text">
-                    <h3>Red / Orange Plant</h3>
-                </div>
-            </div>
-            <div id="long-img-5">
-                <img src="../imgs/composition/side_of_school.JPG" alt="">
-                <div class="img_text">
-                    <h3>School Wall</h3>
-                </div>
-            </div>
-            <div id="long-img-6">
-                <img src="../imgs/composition/sunflower.JPG" alt="">
-                <div class="img_text">
-                    <h3>Sunflower</h3>
-                </div>
-            </div>
-
-
-
-            <div id="short-img-1">
-                <img src="../imgs/composition/birb.JPG" alt="">
-                <div class="img_text">
-                    <h3>Birb</h3>
-                </div>
-            </div>
-            <div id="short-img-2">
-                <img src="../imgs/composition/brick_wall.JPG" alt="">
-                <div class="img_text">
-                    <h3>Brick Wall</h3>
-                </div>
-            </div>
-            <div id="short-img-3">
-                <img src="../imgs/composition/outside_window.JPG" alt="">
-                <div class="img_text">
-                    <h3>The Outside World</h3>
-                </div>
-            </div>
-
-            <div id="short-img-4">
-                <img src="../imgs/composition/sunflower_seeds.JPG" alt="">
-                <div class="img_text">
-                    <h3>Sunflower Seeds</h3>
-                </div>
-            </div>
-            <div id="short-img-5">
-                <img src="../imgs/composition/through_bikes.JPG" alt="">
-                <div class="img_text">
-                    <h3>Bikes</h3>
-                </div>
-            </div>
-            <div id="short-img-6">
-                <img src="../imgs/composition/vertical_brick_wall.JPG" alt="">
-                <div class="img_text">
-                    <h3>Vertical Bricks</h3>
-                </div>
-            </div> -->
-
         </div>
     </section>
+    <div id="popup-overlay">
+        <img src="" id="popup-img">
+        <p id="close">
+            <span class="material-symbols-outlined" style="font-size: 40px;">
+                close
+            </span>
+        </p>
+    </div>
 </body>
 </html>
